--- a/webauthn.html
+++ b/webauthn.html
@@ -16,12 +16,13 @@
   }</style>
 </head>
 <body>
+
+    <h1> webauthn iframe test </h1>
   <main role="main" class="container">
+<p> First, register an account  <a href="https://webauthn-demo-app.webauthn-demo-app-dvd2.arinze-okeke.eu.spin.dev/registration/new" target=”_blank” >here </a> </p>
 
-        <h2>local demo</h2>
-<iframe width="1000px"  height="1000px" src="http://localhost:3000/" allow="publickey-credentials-get"></iframe>
 
-    <h2>spin demo</h2>
+<h2>spin URL Iframe</h2>
 <iframe width="1000px"  height="1000px" src="https://webauthn-demo-app.webauthn-demo-app-dvd2.arinze-okeke.eu.spin.dev" allow="publickey-credentials-get"></iframe>
 
 
