--- a/webauthn.html
+++ b/webauthn.html
@@ -16,14 +16,13 @@
   }</style>
 </head>
 <body>
-
     <h1> webauthn iframe test </h1>
   <main role="main" class="container">
 <p> First, register an account  <a href="https://webauthn-demo-app.webauthn-demo-app-fxpq.arinze-okeke.eu.spin.dev/registration/new" target=”_blank” >here </a> </p>
 
 
 <h2>spin URL Iframe</h2>
-<iframe width="1000px"  height="1000px" src="https://webauthn-demo-app.webauthn-demo-app-fxpq.arinze-okeke.eu.spin.dev" allow="publickey-credentials-get"></iframe>
+<iframe width="100%" height="500px" src="https://webauthn-demo-app.webauthn-demo-app-fxpq.arinze-okeke.eu.spin.dev" allow="publickey-credentials-get"></iframe>
 
     <br></br>
 
@@ -31,7 +30,7 @@
     <p> First, register an account  <a href="https://c0da-2a01-4b00-851e-4d00-d085-c10d-950f-6b50.eu.ngrok.io/registration/new" target=”_blank” >here </a> </p>
 
 <h2>ngrok URL Iframe</h2>
-    <iframe width="1000px"  height="1000px" src="https://c0da-2a01-4b00-851e-4d00-d085-c10d-950f-6b50.eu.ngrok.io" allow="publickey-credentials-get"></iframe>
+    <iframe width="100%" height="500px" src="https://c0da-2a01-4b00-851e-4d00-d085-c10d-950f-6b50.eu.ngrok.io" allow="publickey-credentials-get"></iframe>
 
 
   </main><!-- /.container -->
